--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -20,15 +20,15 @@ jobs:
             modules: []
           - version: full
             modules: [
-              module: {name: 'simplesamlphp/simplesamlphp-module-authorize', version: '^1.2'},
-              module: {name: 'simplesamlphp/simplesamlphp-module-consent', version: '^1.2'},
-              module: {name: 'simplesamlphp/simplesamlphp-module-consentadmin', version: '^1.0'},
-              module: {name: 'simplesamlphp/simplesamlphp-module-discopower', version: '^1.3'},
-              module: {name: 'simplesamlphp/simplesamlphp-module-ldap', version: '^2.1'},
-              module: {name: 'simplesamlphp/simplesamlphp-module-metarefresh', version: '^1.1'},
-              module: {name: 'simplesamlphp/simplesamlphp-module-radius', version: '^2.0'},
-              module: {name: 'simplesamlphp/simplesamlphp-module-statictics', version: '^1.1'},
-              module: {name: 'simplesamlphp/simplesamlphp-module-sqlauth', version: '^1.0'}
+              authorize: {name: 'simplesamlphp/simplesamlphp-module-authorize', version: '^1.2'},
+              consent: {name: 'simplesamlphp/simplesamlphp-module-consent', version: '^1.2'},
+              consentadmin: {name: 'simplesamlphp/simplesamlphp-module-consentadmin', version: '^1.0'},
+              discopower: {name: 'simplesamlphp/simplesamlphp-module-discopower', version: '^1.3'},
+              ldap: {name: 'simplesamlphp/simplesamlphp-module-ldap', version: '^2.1'},
+              metarefresh: {name: 'simplesamlphp/simplesamlphp-module-metarefresh', version: '^1.1'},
+              radius: {name: 'simplesamlphp/simplesamlphp-module-radius', version: '^2.0'},
+              statistics: {name: 'simplesamlphp/simplesamlphp-module-statictics', version: '^1.1'},
+              sqlauth: {name: 'simplesamlphp/simplesamlphp-module-sqlauth', version: '^1.0'}
             ]
 
     steps:
@@ -68,10 +68,13 @@ jobs:
       - name: Install SimpleSAMLphp modules
         if: toJSON(matrix.modules) != '[]'
         run: |
-          for module in $(echo $matrix.modules | jq -r "to_entries|map(\"\(.key)=\(.value|tostring)\")|.[]" ); do
-            export $s
-          done
-
+          echo "${{ toJSON(matrix.modules) }}" >> "${{ matrix.version }}.json"
+          for k in $(jq '.modules | keys | .[]' "${{ matrix.version }}.json); do
+            module=$(jq -r ".modules[$k]" "${{ matrix.version }}.json");
+            repository=$(jq -r '.repository' <<< "$module");
+            v=$(jq -r '.version' <<< "$module");
+	    printf '%s\t%s\t%s\n' "$k" "$repository" "$v";
+          done | column -t -s$'\t'
 #          composer require $MODULE_NAME:$MODULE_VERSION --update-no-dev
 
       - name: Clean release
