--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -70,11 +70,14 @@ jobs:
         run: |
           echo "${{ toJSON(matrix.modules) }}" >> "${{ matrix.version }}.json"
           for k in "$(jq '.modules | keys | .[]' ${{ matrix.version }}.json)"; do
+            echo "YES";
+          done
+
+
 #            module=$(jq -r ".modules[$k]" "${{ matrix.version }}.json");
 #            repository=$(jq -r '.repository' <<< "$module");
 #            v=$(jq -r '.version' <<< "$module");
 #	    printf '%s\t%s\t%s\n' "$k" "$repository" "$v";
-          done
 #          done | column -t -s$'\t'
 #          composer require $MODULE_NAME:$MODULE_VERSION --update-no-dev
 
