--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -20,15 +20,15 @@ jobs:
             modules: []
           - version: full
             modules: [
-              authorize: {name: 'simplesamlphp/simplesamlphp-module-authorize', version: '^1.2'},
-              consent: {name: 'simplesamlphp/simplesamlphp-module-consent', version: '^1.2'},
-              consentadmin: {name: 'simplesamlphp/simplesamlphp-module-consentadmin', version: '^1.0'},
-              discopower: {name: 'simplesamlphp/simplesamlphp-module-discopower', version: '^1.3'},
-              ldap: {name: 'simplesamlphp/simplesamlphp-module-ldap', version: '^2.1'},
-              metarefresh: {name: 'simplesamlphp/simplesamlphp-module-metarefresh', version: '^1.1'},
-              radius: {name: 'simplesamlphp/simplesamlphp-module-radius', version: '^2.0'},
-              statistics: {name: 'simplesamlphp/simplesamlphp-module-statictics', version: '^1.1'},
-              sqlauth: {name: 'simplesamlphp/simplesamlphp-module-sqlauth', version: '^1.0'}
+              - authorize: {name: 'simplesamlphp/simplesamlphp-module-authorize', version: '^1.2'}
+              - consent: {name: 'simplesamlphp/simplesamlphp-module-consent', version: '^1.2'}
+              - consentadmin: {name: 'simplesamlphp/simplesamlphp-module-consentadmin', version: '^1.0'}
+              - discopower: {name: 'simplesamlphp/simplesamlphp-module-discopower', version: '^1.3'}
+              - ldap: {name: 'simplesamlphp/simplesamlphp-module-ldap', version: '^2.1'}
+              - metarefresh: {name: 'simplesamlphp/simplesamlphp-module-metarefresh', version: '^1.1'}
+              - radius: {name: 'simplesamlphp/simplesamlphp-module-radius', version: '^2.0'}
+              - statistics: {name: 'simplesamlphp/simplesamlphp-module-statictics', version: '^1.1'}
+              - sqlauth: {name: 'simplesamlphp/simplesamlphp-module-sqlauth', version: '^1.0'}
             ]
 
     steps:
