--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -15,21 +15,6 @@ jobs:
       fail-fast: false
       matrix:
         version: ['slim', 'full']
-        include:
-          - version: slim
-            modules: []
-          - version: full
-            modules: [
-              - authorize: {name: 'simplesamlphp/simplesamlphp-module-authorize', version: '^1.2'}
-              - consent: {name: 'simplesamlphp/simplesamlphp-module-consent', version: '^1.2'}
-              - consentadmin: {name: 'simplesamlphp/simplesamlphp-module-consentadmin', version: '^1.0'}
-              - discopower: {name: 'simplesamlphp/simplesamlphp-module-discopower', version: '^1.3'}
-              - ldap: {name: 'simplesamlphp/simplesamlphp-module-ldap', version: '^2.1'}
-              - metarefresh: {name: 'simplesamlphp/simplesamlphp-module-metarefresh', version: '^1.1'}
-              - radius: {name: 'simplesamlphp/simplesamlphp-module-radius', version: '^2.0'}
-              - statistics: {name: 'simplesamlphp/simplesamlphp-module-statictics', version: '^1.1'}
-              - sqlauth: {name: 'simplesamlphp/simplesamlphp-module-sqlauth', version: '^1.0'}
-            ]
 
     steps:
       - name: Setup PHP, with composer and extensions
@@ -67,10 +52,11 @@ jobs:
 
       - name: Install SimpleSAMLphp modules
         if: toJSON(matrix.modules) != '[]'
+        env:
+          FILE: ".github/build/${{ matrix.version }}.json"
         run: |
-          echo "${{ toJSON(matrix.modules) }}" >> "${{ matrix.version }}.json"
-          for k in "$(jq '.modules | keys | .[]' ${{ matrix.version }}.json)"; do
-            echo "YES";
+          for k in "$(jq '.modules | keys | .[]' ${{ env.FILE }})"; do
+            echo "${{ env.file }}";
           done
 
 
