--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -51,12 +51,11 @@ jobs:
         run: composer install --no-progress --no-dev --prefer-dist --optimize-autoloader
 
       - name: Install SimpleSAMLphp modules
-        if: toJSON(matrix.modules) != '[]'
         env:
           FILE: ".github/build/${{ matrix.version }}.json"
         run: |
           for k in "$(jq '.modules | keys | .[]' ${{ env.FILE }})"; do
-            module=$(jq -r ".modules[$k]" "${{ env.FILE }}.json");
+            module=$(jq -r ".modules[$k]" "${{ env.FILE }}");
             repository=$(jq -r '.repository' <<< "$module");
             v=$(jq -r '.version' <<< "$module");
 
