--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -54,8 +54,8 @@ jobs:
         env:
           FILE: ".github/build/${{ matrix.version }}.json"
         run: |
-          for k in $(jq '.modules | keys | .[]' env.FILE); do
-            module=$(jq -r ".modules[$k]" env.FILE);
+          for k in $(jq '.modules | keys | .[]' $FILE); do
+            module=$(jq -r ".modules[$k]" $FILE);
             if [ -z "$module" ];
             then
               repository=$(jq -r '.repository' <<< "$module");
