--- a/composer.json
+++ b/composer.json
@@ -67,7 +67,7 @@
         "psr/log": "^2.0 || ^3.0",
         "robrichards/xmlseclibs": "^3.1.1",
         "simplesamlphp/assert": "^1.0.0",
-        "simplesamlphp/saml2": "^v5.0.0-alpha.8",
+        "simplesamlphp/saml2": "^v5.0.0@dev",
         "simplesamlphp/simplesamlphp-assets-base": "^2.0.0",
         "simplesamlphp/simplesamlphp-module-adfs": "^3.0.0@dev",
         "symfony/cache": "^5.4||^6",
