--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -260,3 +260,7 @@ jobs:
 
       - name: Codecov
         uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          fail_ci_if_error: true
+          verbose: true
