--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
         "simplesamlphp/assert": "^1.0.0",
         "simplesamlphp/composer-module-installer": "^1.3",
         "simplesamlphp/saml2": "^4.6",
-        "simplesamlphp/simplesamlphp-assets-base": "^2.0",
+        "simplesamlphp/simplesamlphp-assets-base": "~2.1.5",
         "symfony/cache": "^6.0",
         "symfony/config": "^6.0",
         "symfony/console": "^6.0",
