--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,7 @@
         "simplesamlphp/assert": "^0.8.0",
         "simplesamlphp/composer-module-installer": "^1.3.0",
         "simplesamlphp/saml2": "^4.6",
-        "simplesamlphp/simplesamlphp-assets-base": "^2.0",
+        "simplesamlphp/simplesamlphp-assets-base": "~2.0.6",
         "symfony/cache": "^5.4",
         "symfony/config": "^5.4",
         "symfony/console": "^5.4",
