--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         "gettext/gettext": "^5.7",
         "gettext/translator": "^1.1",
         "phpmailer/phpmailer": "^6.8",
+        "psr/log": "^3.0",
         "simplesamlphp/assert": "^1.0.0",
         "simplesamlphp/composer-module-installer": "^1.3",
         "simplesamlphp/saml2": "^4.6",
