--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -79,7 +79,7 @@ jobs:
         run: composer-require-checker check --config-file tools/composer-require-checker.json composer.json
 
       - name: Check code for unused dependencies in composer.json
-        run: composer-unused --excludePackage=simplesamlphp/simplesamlphp-assets-base
+        run: composer-unused --excludePackage=simplesamlphp/simplesamlphp-assets-base --excludePackage=composer/composer
 
       - name: PHP Code Sniffer
         run: phpcs
