--- a/composer.json
+++ b/composer.json
@@ -58,37 +58,39 @@
         "ext-pcre": "*",
         "ext-session": "*",
         "ext-simplexml": "*",
-        "ext-spl": "*",
+        "ext-SPL": "*",
         "ext-xml": "*",
+        "ext-zlib": "*",
 
-        "gettext/gettext": "^5.6.1",
-        "gettext/translator": "^1.0.1",
-        "phpmailer/phpmailer": "^6.5",
-        "psr/log": "^2.0 || ^3.0",
+        "composer/composer": "^2.5",
+        "gettext/gettext": "^5.7",
+        "gettext/translator": "^1.1",
+        "phpmailer/phpmailer": "^6.8",
+        "psr/log": "^3.0",
         "robrichards/xmlseclibs": "^3.1.1",
         "simplesamlphp/assert": "^1.0.0",
         "simplesamlphp/saml2": "^v5.0.0@dev",
         "simplesamlphp/simplesamlphp-assets-base": "^2.0.0",
         "simplesamlphp/simplesamlphp-module-adfs": "dev-release-2.1@dev",
-        "symfony/cache": "^5.4||^6",
-        "symfony/config": "^5.4||^6",
-        "symfony/console": "^5.4||^6",
-        "symfony/dependency-injection": "^5.4||^6",
-        "symfony/filesystem": "^5.4||^6",
-        "symfony/finder": "^5.4||^6",
-        "symfony/framework-bundle": "^5.4||^6",
-        "symfony/http-foundation": "^5.4||^6",
-        "symfony/http-kernel": "^5.4||^6",
-        "symfony/intl": "^5.4||^6",
-        "symfony/psr-http-message-bridge": "^2.1",
-        "symfony/routing": "^5.4||^6",
-        "symfony/translation-contracts": "^2.5||^3",
-        "symfony/twig-bridge": "^5.4||^6",
-        "symfony/var-exporter": "^5.4||^6",
-        "symfony/yaml": "^5.4||^6",
+        "simplesamlphp/xml-common": "^1.12",
+        "symfony/cache": "^6.0",
+        "symfony/config": "^6.0",
+        "symfony/console": "^6.0",
+        "symfony/dependency-injection": "^6.0",
+        "symfony/filesystem": "^6.0",
+        "symfony/finder": "^6.0",
+        "symfony/framework-bundle": "^6.0",
+        "symfony/http-foundation": "^6.0",
+        "symfony/http-kernel": "^6.0",
+        "symfony/intl": "^6.0",
+        "symfony/psr-http-message-bridge": "^2.3",
+        "symfony/routing": "^6.0",
+        "symfony/translation-contracts": "^3.0",
+        "symfony/twig-bridge": "^6.0",
+        "symfony/var-exporter": "^6.0",
+        "symfony/yaml": "^6.0",
         "twig/intl-extra": "^3.3",
-        "twig/twig": "^3.3.8",
-        "simplesamlphp/xml-common": "^1.12"
+        "twig/twig": "^3.3.8"
     },
     "require-dev": {
         "mikey179/vfsstream": "~1.6",
