Set allowed methods on routers to enhance security

--- a/modules/core/routing/routes/routes.yml
+++ b/modules/core/routing/routes/routes.yml
@@ -122,6 +122,7 @@ core-logout-iframe-done:
   defaults: {
     _controller: 'SimpleSAML\Module\core\Controller\Logout::logoutIframeDone'
   }
+  methods: [GET]
 
 core-logout-iframe-post:
   path: /logout-iframe-post
