Fix allowed methods for md-convertor

--- a/modules/admin/routing/routes/routes.yml
+++ b/modules/admin/routing/routes/routes.yml
@@ -69,4 +69,4 @@ admin-fed-converter:
   defaults: {
     _controller: 'SimpleSAML\Module\admin\Controller\Federation::metadataConverter'
   }
-  methods: [POST]
+  methods: [GET, POST]
