--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -11,6 +11,7 @@ on:  # yamllint disable-line rule:truthy
     branches: [master, simplesamlphp-*]
     paths-ignore:
       - '**.md'
+  workflow_dispatch
 
 jobs:
   linter:
