Clean up after ourselves

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -281,3 +281,17 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           fail_ci_if_error: true
           verbose: true
+
+  cleanup:
+    name: Cleanup artifacts
+    needs: [unit-tests-linux, coverage]
+    runs-on: [ubuntu-latest]
+    if: |
+      always() &&
+      needs.coverage.result == 'success' &&
+      (needs.unit-tests-linux == 'success' || needs.coverage == 'skipped')
+
+    steps:
+      - uses: geekyeggo/delete-artifact@v2
+        with:
+          name: coverage-data
