Use the twig-bridge instead of compiling twig-templates

--- a/composer.json
+++ b/composer.json
@@ -85,6 +85,7 @@
         "symfony/intl": "^6.0",
         "symfony/psr-http-message-bridge": "^2.3",
         "symfony/routing": "^6.0",
+        "symfony/translation": "^6.0",
         "symfony/translation-contracts": "^3.0",
         "symfony/twig-bridge": "^6.0",
         "symfony/var-exporter": "^6.0",
