--- a/composer.json
+++ b/composer.json
@@ -85,7 +85,6 @@
         "symfony/intl": "^6.0",
         "symfony/psr-http-message-bridge": "^2.3",
         "symfony/routing": "^6.0",
-        "symfony/translation": "^6.0",
         "symfony/translation-contracts": "^3.0",
         "symfony/twig-bridge": "^6.0",
         "symfony/var-exporter": "^6.0",
@@ -100,7 +99,8 @@
         "gettext/php-scanner": "1.3.1",
         "mikey179/vfsstream": "~1.6",
         "simplesamlphp/simplesamlphp-test-framework": "^1.5.1",
-        "simplesamlphp/xml-security": "^1.6.0"
+        "simplesamlphp/xml-security": "^1.6.0",
+        "symfony/translation": "^6.0"
     },
     "suggest": {
         "predis/predis": "Needed if a Redis server is used to store session information",
