--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,10 @@
 cert/.gitkeep export-ignore
 public/assets/.gitkeep export-ignore
 tools export-ignore
+locales/*.pot export-ignore
+locales/*/LC_MESSAGES/*.po export-ignore
+modules/*/locales/*.pot export-ignore
+modules/*/locales/*/LC_MESSAGES/*.po export-ignore
 tests/Utils export-ignore
 tests/modules export-ignore
 tests/routers export-ignore
