--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -55,6 +55,9 @@ jobs:
 
       - uses: actions/checkout@v3
 
+      - name: Install Composer dependencies
+        run: composer install --no-progress --prefer-dist --optimize-autoloader
+
       - name: Generate POT-files
         run: php bin/get-translatable-strings --main
 
