--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,7 @@
         "gettext/gettext": "^5.6.1",
         "gettext/translator": "^1.0.1",
         "phpmailer/phpmailer": "^6.5",
-        "simplesamlphp/assert": "^0.8.0",
+        "simplesamlphp/assert": "^0.8.0 || ^1.0",
         "simplesamlphp/composer-module-installer": "^1.3.0",
         "simplesamlphp/saml2": "^4.6",
         "simplesamlphp/simplesamlphp-assets-base": "~2.0.6",
