Add dependency on sodium-extension

--- a/composer.json
+++ b/composer.json
@@ -58,6 +58,7 @@
         "ext-pcre": "*",
         "ext-session": "*",
         "ext-simplexml": "*",
+        "ext-sodium": "*",
         "ext-SPL": "*",
         "ext-xml": "*",
         "ext-zlib": "*",
