--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           # Should match the minimum required version for SimpleSAMLphp
           php-version: '8.0'
-          tools: composer:v2
+          tools: composer:v2, phive
           extensions: mbstring, xml
 
       - name: Setup problem matchers for PHP
@@ -63,6 +63,9 @@ jobs:
               composer require "$repository:$v" --update-no-dev --ignore-platform-reqs
             fi
           done
+
+      - name: Add composer.phar to the release
+        run: phive --no-progress install --trust-gpg-keys CBB3D576F2A0946F --copy --target ./bin composer
 
       - name: Clean release
         run: |
