--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ metadata/*
 !/public/assets/.gitkeep
 /public/assets/*
 .phpunit.result.cache
+.phive
 
 # https://www.gitignore.io/api/osx,windows,linux,netbeans,sublimetext,composer,phpstorm,vagrant
 # Created by https://www.gitignore.io
