Use best available encryption in pwgen.php (#1849)
* Use best available encryption in pwgen.php

* Add dependency on sodium-extension

---------

Co-authored-by: Tim van Dijen <tvdijen@gmail.com>

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -26,7 +26,7 @@ jobs:
           # Should match the minimum required version for SimpleSAMLphp
           php-version: '8.0'
           tools: composer:v2, phive
-          extensions: mbstring, xml
+          extensions: mbstring, sodium, xml
           coverage: none
 
       - name: Setup problem matchers for PHP
