--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -51,7 +51,7 @@ jobs:
           tools: composer, composer-require-checker, composer-unused, phpcs, psalm
           # optional performance gain for psalm: opcache
           extensions: ctype, date, dom, fileinfo, filter, hash, intl, json, mbstring, mysql, \
-            opcache, openssl, pcre, pdo, pdo_sqlite, posix, soap, spl, xml
+            opcache, openssl, pcre, pdo, pdo_sqlite, posix, soap, sodium, spl, xml
           coverage: none
 
       - name: Setup problem matchers for PHP
@@ -118,7 +118,7 @@ jobs:
           # Should be the lowest supported version
           php-version: '8.0'
           extensions: ctype, date, dom, hash, fileinfo, filter, intl, json, mbstring, mysql, \
-            openssl, pcre, pdo, pdo_sqlite, posix, soap, spl, xml
+            openssl, pcre, pdo, pdo_sqlite, posix, soap, sodium, spl, xml
           tools: composer
           coverage: none
 
@@ -166,7 +166,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: ctype, date, dom, fileinfo, filter, hash, intl, json, mbstring, mysql, openssl, pcre,\
-            pdo, pdo_sqlite, posix, soap, spl, xdebug, xml
+            pdo, pdo_sqlite, posix, soap, sodium, spl, xdebug, xml
           tools: composer
           ini-values: error_reporting=E_ALL, pcov.directory=.
           coverage: pcov
@@ -229,7 +229,7 @@ jobs:
         with:
           php-version: ${{ matrix.php-versions }}
           extensions: ctype, dom, date, fileinfo, filter, hash, intl, json, mbstring, mysql, openssl, pcre, \
-            pdo, pdo_sqlite, posix, soap, spl, xdebug, xml
+            pdo, pdo_sqlite, posix, soap, sodium, spl, xdebug, xml
           tools: composer
           ini-values: error_reporting=E_ALL
           coverage: none
