Use best available encryption in pwgen.php (#1849)
* Use best available encryption in pwgen.php

* Add dependency on sodium-extension

---------

Co-authored-by: Tim van Dijen <tvdijen@gmail.com>

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -47,7 +47,8 @@ jobs:
         with:
           php-version: '8.0'
           tools: composer, phpcs, psalm
-          extensions: mbstring, xml
+          extensions: mbstring, sodium, xml
+          coverage: none
 
       - name: Setup problem matchers for PHP
         run: echo "::add-matcher::${{ runner.tool_cache }}/php.json"
@@ -113,7 +114,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.0'
-          extensions: mbstring, xml
+          extensions: mbstring, sodium, xml
           tools: composer:v2
           coverage: none
 
@@ -160,7 +161,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: intl, mbstring, mysql, pdo, pdo_sqlite, xml
+          extensions: intl, mbstring, mysql, pdo, pdo_sqlite, sodium, xml
           tools: composer:v2
           ini-values: error_reporting=E_ALL
           coverage: xdebug
@@ -222,7 +223,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: ${{ matrix.php-versions }}
-          extensions: intl, mbstring, mysql, pdo, pdo_sqlite, xml
+          extensions: intl, mbstring, mysql, pdo, pdo_sqlite, sodium, xml
           tools: composer:v2
           ini-values: error_reporting=E_ALL
           coverage: none
