--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -25,7 +25,7 @@ jobs:
           # Should match the minimum required version for SimpleSAMLphp
           php-version: '8.0'
           tools: composer:v2, phive
-          extensions: mbstring, sodium, xml
+          extensions: mbstring, xml
           coverage: none
 
       - name: Setup problem matchers for PHP
