--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -94,6 +94,7 @@ jobs:
           --php-version=${{ steps.setup-php.outputs.php-version }}
 
       - name: Psalm (testsuite)
+        continue-on-error: true
         run: |
           psalm -c psalm-dev.xml \
           --show-info=true \
