--- a/.github/workflows/translations.yml
+++ b/.github/workflows/translations.yml
@@ -36,7 +36,7 @@ jobs:
       #    lint-po modules/*/locales/*/LC_MESSAGES/*.po
 
   build:
-    name: Build PO- and MO-files
+    name: Build PO-files
     runs-on: ['ubuntu-latest']
     needs: quality
 
@@ -71,7 +71,7 @@ jobs:
 
           # Check if any of the translation files have changed (added, modified, deleted)
           $SourceDiff = $Diff | Where-Object {
-              $_ -match '^*.mo' -or $_ -match '^*.po'
+              $_ -match '^*.po'
           }
           echo "Changed files"
           echo $SourceDiff
